syntax = "proto3";

package pb;
option go_package="./pb";

// 分页查询
message PageQuery {
    int64 page = 1;
    int64 page_size = 2;
    string order_by = 3;
}



// 大语言模型配置
message LlmConfig {
    // API基础URL (必选)
    string baseUrl = 1;
    // API密钥 (必选)
    string apiKey = 2;
    // 模型名称 (必选)
    string model = 3;
    // 采样温度，控制模型生成文本的多样性 (可选)
    double temperature = 4;
    // 核采样的概率阈值 (可选)
    double top_p = 5;
    // 生成过程中采样候选集的大小 (可选)
    int64 top_k = 6;
    // 是否开启思考模式 (可选)
    bool enable_thinking = 7;
    // 控制模型生成文本时的内容重复度（已弃用，请使用presence_penalty）(可选)
    double repetition_penalty = 8;
    // 控制模型生成文本时的内容重复度 (可选)
    double presence_penalty = 9;
    // 返回内容的格式, e.g., "text", "json_object" (可选)
    string response_format = 10;
    // 流式输出特定选项 (可选)
    StreamOptions stream_options = 11;
    // 本次请求返回的最大 Token 数 (可选)
    int64 max_tokens = 12;
    // 随机种子，用于结果可复现 (可选)
    int64 seed = 13;
    // 是否启用互联网搜索 (可选)
    bool enable_search = 14;
    // 上下文长度 (可选)
    int64 content_length = 15;
}

// 流式输出选项
message StreamOptions {
    // 是否在输出的最后一行显示所使用的Token数 (可选)
    bool include_usage = 1;
}

message ChatMsg {
    string role = 1; //System,User,Assistant,tool
    string content = 2;
}

// 创建聊天请求
message ChatReq {
    // 已存在的会话标识，用于继续对话（可选）
    string conversation_id = 1;
    // 用户标识，用于权限校验（必选）
    int64 user_id = 2;
    // 当前大模型请求配置
    LlmConfig llmConfig = 3;
    // 当创建新会话时的上下文消息（继续会话时可选）
    repeated ChatMsg messages = 4;
    // 是否允许服务端自动回填历史记录（默认 true）
    bool auto_fill_history = 5;
}

message ChatResp {
    string id = 1;
    repeated ChatMsg respMsg = 2;
}

message ChatStreamReq {
    // 已存在的会话标识，用于继续对话（可选）
    string conversation_id = 1;
    // 用户标识，用于权限校验（必选）
    int64 user_id = 2;
    // 当前大模型请求配置
    LlmConfig llmConfig = 3;
    // 当创建新会话时的上下文消息（继续会话时可选）
    repeated ChatMsg messages = 4;
    // 是否允许服务端自动回填历史记录（默认 true）
    bool auto_fill_history = 5;
}

// 流式内容增量
message StreamDelta {
    string content = 1;
    bool completed = 2;
}

// 工具调用增量信息（模板）
message ToolCallDelta {
    string id = 1;
    string name = 2;
    string arguments_json = 3;
    bool completed = 4;
    string response_json = 5;
    string status = 6;
}

// token 消耗信息
message UsageData {
    int64 prompt_tokens = 1;
    int64 completion_tokens = 2;
    int64 total_tokens = 3;
}

message ChatStreamResp {
    string id = 1;
    oneof payload {
        StreamDelta delta = 2;
        ToolCallDelta tool_call = 3;
        UsageData usage = 4;
        string error = 5;
    }
}




// ChatConfig represents the configuration for a chat session.
message ChatConfig {
    int64 id = 1;
    string name = 2;
    string description = 3;
    int64 user_id = 4;
    string base_url = 5;
    string api_key = 6;
    string model = 7;
    int64 stream = 8;
    double temperature = 9;
    double top_p = 10;
    int64 top_k = 11;
    int64 enable_thinking = 12;
    double repetition_penalty = 13;
    double presence_penalty = 14;
    int64 max_tokens = 15;
    int64 seed = 16;
    int64 enable_search = 17;
    int64 context_length = 18;
}

// --- Config Management ---

// Create
message CreateConfigReq {
    string name = 1;
    string description = 2;
    int64 user_id = 3;
    string base_url = 4;
    string api_key = 5;
    string model = 6;
    int64 stream = 7;
    double temperature = 8;
    double top_p = 9;
    int64 top_k = 10;
    int64 enable_thinking = 11;
    double repetition_penalty = 12;
    double presence_penalty = 13;
    int64 max_tokens = 14;
    int64 seed = 15;
    int64 enable_search = 16;
    int64 context_length = 17;
}
message CreateConfigResp {
    int64 id = 1;
}

// Delete
message DeleteConfigReq {
    int64 id = 1;
}
message DeleteConfigResp {
}

// Update
message UpdateConfigReq {
    int64 id = 1;
    string name = 2;
    string description = 3;
    int64 user_id = 4;
    string base_url = 5;
    string api_key = 6;
    string model = 7;
    int64 stream = 8;
    double temperature = 9;
    double top_p = 10;
    int64 top_k = 11;
    int64 enable_thinking = 12;
    double repetition_penalty = 13;
    double presence_penalty = 14;
    int64 max_tokens = 15;
    int64 seed = 16;
    int64 enable_search = 17;
    int64 context_length = 18;
}
message UpdateConfigResp {
}

// Get
message GetConfigReq {
    int64 id = 1;
}
message GetConfigResp {
    ChatConfig config = 1;
}

// List
message ListConfigFilter {
    int64 id = 1;
    int64 user_id = 2;
    string name = 3;
    string description = 4;
}
message ListConfigReq {
    PageQuery pageQuery = 1;
    ListConfigFilter filter = 2;
}
message ListConfigResp {
    int64 total = 1;
    repeated ChatConfig configs = 2;
}


service LlmChatService {
    rpc Chat(ChatReq) returns (ChatResp);
    rpc ChatStream(ChatStreamReq) returns (stream ChatStreamResp);
}

service LlmConfigService {
    rpc CreateConfig(CreateConfigReq) returns (CreateConfigResp);
    rpc DeleteConfig(DeleteConfigReq) returns (DeleteConfigResp);
    rpc UpdateConfig(UpdateConfigReq) returns (UpdateConfigResp);
    rpc GetConfig(GetConfigReq) returns (GetConfigResp);
    rpc ListConfig(ListConfigReq) returns (ListConfigResp);
}